--- a/Source/Help/Output/index.html
+++ b/Source/Help/Output/index.html
@@ -73,7 +73,7 @@ The <code>Krypton Suite</code> consists of five products called <code>Krypton To
 <li>Modifications by Peter Wagner (aka Wagnerp) &amp; Simon Coghlan (aka Smurf-IV)  have been fixing and adding more capabilities to this toolkit.</li>
 <li>There is also an Extensions project, which takes these base controls and add more useful complete controls (Currently outside the scope of this help). To find out more, please head to <a href="https://github.com/Krypton-Suite/Extended-Toolkit">this link</a></li>
 <li>All .Net Versions from 4.6.2 are catered for </li>
-<li>New versions of Nuget packages can be obtained via <a href="https://www.nuget.org/profiles/Krypton_Suite">this link</a>, or via your package manager by searching <code>Krypton.</code>.</li>
+<li>New versions of NuGet packages can be obtained via <a href="https://www.nuget.org/profiles/Krypton_Suite">this link</a>, or via your package manager by searching <code>Krypton.</code>.</li>
 </ul>
 <h2 id="krypton-toolkitarticleskryptontoolkitmd"><a href="articles/Krypton_Toolkit.html">Krypton Toolkit</a></h2>
 <p>The <code>Krypton Toolkit</code> provides a set of basic user interface components for free. You can distribute the signed Krypton Toolkit assembly without charge or royalty with your own products. 
