--- a/Source/Help/Output/toc.html
+++ b/Source/Help/Output/toc.html
@@ -13,7 +13,7 @@
 
           <ul class="nav level1">
                 <li>
-                    <a href="articles/intro.html" name="articles/toc.html" title="Articles">Articles</a>
+                    <a href="articles/Getting%20Started.html" name="articles/toc.html" title="Articles">Articles</a>
                 </li>
                 <li>
                     <a href="api/index.html" name="" title="Api Documentation">Api Documentation</a>
