--- a/Source/Help/Output/index.html
+++ b/Source/Help/Output/index.html
@@ -62,8 +62,8 @@
             <article class="content wrap" id="_content" data-uid="">
 <h1 id="introduction">Introduction</h1>
 
-<p>The <code>Krypton Suite</code> contains user interface components designed to make it quick and easy for developers to create professional looking applications. It provides the essential building blocks needed to create a consistent look and feel across all your products. You can use the built-in palettes to achieve the same appearance as industry standard applications such as <em>Microsoft Office 2007/2010/2013/365</em>. Alternatively you can create your own custom palettes to create a completely unique user interface.
-The <code>Krypton Suite</code> consists of five products called <code>Krypton Toolkit, Krypton Ribbon, Krypton Navigator, Krypton Workspace</code> and <code>Krypton Docking</code>.</p>
+<p>The <code>Krypton Suite</code> contains user interface components designed to make it quick and easy for developers to create professional looking applications. It provides the essential building blocks needed to create a consistent look and feel across all your products. You can use the built-in palettes to achieve the same appearance as industry standard applications such as <em>Microsoft Office 2007/2010/2013/365</em> and <em>Visual Studio</em>. Alternatively you can create your own custom palettes to create a completely unique user interface.
+The <code>Krypton Suite</code> consists of five products called <code>Krypton Toolkit</code>, <code>Krypton Ribbon</code>, <code>Krypton Navigator</code>, <code>Krypton Workspace</code> and <code>Krypton Docking</code>.</p>
 <h2 id="httpsgithubcomkrypton-suitestandard-toolkit"><a href="https://github.com/Krypton-Suite/Standard-Toolkit">https://github.com/Krypton-Suite/Standard-Toolkit</a></h2>
 <ul>
 <li>Modifications by Peter Wagner (aka Wagnerp) &amp; Simon Coghlan (aka Smurf-IV)  have been fixing and adding more capabilities to this toolkit.</li>
@@ -75,7 +75,7 @@ The <code>Krypton Suite</code> consists of five products called <code>Krypton To
 <p>If you are new to the Krypton Toolkit, please start here to gain a basic understanding of what the toolkit can do first, before using it in your own applications.</p>
 <h2 id="krypton-toolkit"><a href="articles/Krypton_Toolkit.html">Krypton Toolkit</a></h2>
 <p>The <code>Krypton Toolkit</code> provides a set of basic user interface components for free. You can distribute the signed Krypton Toolkit assembly without charge or royalty with your own products.
-The <code>Krypton Toolkit</code> is great resource for speeding up development of professional looking applications. It works in tandem with the <code>MenuStrip, StatusStrip and ToolStrip</code> controls that come with <em>.NET Framework</em> controls. Using the <code>Krypton Toolkit</code> you can create a great looking application in just minutes.</p>
+The <code>Krypton Toolkit</code> is great resource for speeding up development of professional looking applications. It works in tandem with the <code>MenuStrip</code>, <code>StatusStrip</code> and <code>ToolStrip</code> controls that come with <em>.NET Framework</em> and <em>.NET</em> controls. Using the <code>Krypton Toolkit</code> you can create a great looking application in just minutes.</p>
 <h2 id="krypton-ribbon"><a href="articles/Krypton_Ribbon.html">Krypton Ribbon</a></h2>
 <p>The <code>Krypton Ribbon</code> is designed to mimic the look, feel and operation of the ribbon control seen in the <em>Microsoft Office 2007/2010/2013/365</em> applications such as <em>Word</em> and <em>Excel</em>. It provides advanced capabilities including the quick access toolbar, contextual tabs and auto shrinking groups. With rich design time support and sample code you can be up and running with the ribbon in no time at all. It integrates with the <code>Krypton Toolkit</code> architecture to ensure a consistent look and feel.</p>
 <h2 id="krypton-navigator"><a href="articles/Krypton_Navigator.html">Krypton Navigator</a></h2>
@@ -88,7 +88,7 @@ The <code>Krypton Toolkit</code> is great resource for speeding up development o
 <p>When writing your own custom controls that are working alongside the Krypton controls you may want to ensure that the look and feel of your custom control matches that of the Krypton components. There are two levels of integration that you can aim for. The first is to use the same palette of colors, font, widths and other metrics when drawing and sizing your custom control. This is the purpose of the <a href="articles/Custom%20Controls/Using%20PaletteBase.html">Using PaletteBase</a> article. Recovering these metrics is actually very simple and you can examine the Custom Control using Palettes sample project to see the principle in action.</p>
 <p>Alternatively you might want to leverage the same rendering code that the Krypton Toolkit controls use. In this case follow the <a href="articles/Custom%20Controls/Using%20IRenderer.html">Using IRenderer</a> article to understand how to render background, border and content elements within your custom control client area. Although a little more complicated this technique has the advantage of performing the hard work for you. You can use the renderer to draw vertical orientated text and elements with tiled images without the need to write the actual drawing code yourself.</p>
 <h2 id="contributing-to-the-standard-toolkit"><a href="articles/Contributing.html">Contributing to the Standard Toolkit</a></h2>
-<p>Want to contribute to the Standard Toolkit project? Learn more here.</p>
+<p>Want to contribute to the Standard Toolkit project? Learn more <a href="articles/Contributing.html">here</a>.</p>
 
 </article>
           </div>
